Bug 156579 - Regression - SVG files are not displayed and exported
Summary: Regression - SVG files are not displayed and exported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1 target:7.6...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-08-02 10:46 UTC by otula
Modified: 2024-03-27 21:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
An example file with a SVG image inserted (70.28 KB, application/vnd.oasis.opendocument.text)
2023-08-02 10:47 UTC, otula
Details
The result in LO 7.5 (OK) (23.90 KB, application/pdf)
2023-08-02 10:47 UTC, otula
Details
The result in LO dev 24 (9.51 KB, application/pdf)
2023-08-02 10:48 UTC, otula
Details

Note You need to log in before you can comment on or make changes to this bug.
Description otula 2023-08-02 10:46:04 UTC
Description:
Inserted SVG files aren't displayed in a Writer and aren't exported. This is a regression as it worked in previous versions.

Steps to Reproduce:
1. Insert -> Image...
2. Select a SVG file
3. Open

Actual Results:
There is only a border displayed in the document. If you export your document as PDF, there is also no image.

Expected Results:
There is displayed the content of the selected image.


Reproducible: Always


User Profile Reset: No

Additional Info:
I'm using the latest build of LibreOfficeDev 24.2.0.0 (2023/08/02). I don't know from which version this regression occurred.
Comment 1 otula 2023-08-02 10:47:08 UTC
Created attachment 188720 [details]
An example file with a SVG image inserted
Comment 2 otula 2023-08-02 10:47:42 UTC
Created attachment 188721 [details]
The result in LO 7.5 (OK)
Comment 3 otula 2023-08-02 10:48:02 UTC
Created attachment 188722 [details]
The result in LO dev 24
Comment 4 Xisco Faulí 2023-08-02 11:37:12 UTC
regression from 13a41e7a12598c7896d6dc8d34aba6af5b80b83c
Comment 5 Commit Notification 2023-08-02 16:05:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76f50549f4898313ef4a18ce32d1f0a625ce766d

tdf#156579: treat switch element as a group

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-08-03 08:04:31 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b4ebb3159e00087ac94cd3494da22a5fa4c3e38f

tdf#156579: treat switch element as a group

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 otula 2023-08-03 08:25:27 UTC
It's OK now. Thank you.
Comment 8 Commit Notification 2023-08-03 20:47:48 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e222f60ac2a71032dbdf62d7c7e28978b5a0b19c

related tdf#156579: just break for switch element

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-08-08 08:19:43 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7820ed9a912bbf5e6c0d98b5a1ea67f549b786e9

related tdf#156579: just break for switch element

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-08-08 16:59:06 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-0":

https://git.libreoffice.org/core/commit/8c3f8c099e09116389ac1ebc782c51532f10c581

tdf#156579: treat switch element as a group

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-08-17 23:09:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b9643960117612b7e1cae1ed8325c2630232d0f

tdf#142424: Revert "related tdf#156579: just break for switch element"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-08-18 19:39:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/06075cd2ffc490feb7560f92ffc894b1e6751f90

tdf#117920: Revert "related tdf#156579: just break for switch element"

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-03-27 21:04:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6b15374d1850de13e977cf4bb2106d38e74a030a

tdf#156579: svgio: Add unittest

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.