tdf#156579: treat switch element as a group

Regression from

commit 13a41e7a12598c7896d6dc8d34aba6af5b80b83c
Author: Xisco Fauli <xiscofauli@libreoffice.org>
Date:   Mon Jul 3 14:11:43 2023 +0200

tdf#150124: do nothing when parent is of unkown type

because 'switch' is not a known token. For now it, treat
it as a group

No need to have a unittest for this

Change-Id: I4cae92a010e45cd729db475a7abccab19a5d5403
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155250
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit b5e44241c2b68a77c5bf299f1c2d912c49ea1a9e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155236
(cherry picked from commit a223f4e3fa111c42bc1743d867fe211c96038649)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155247
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>