svgio/source/svgreader/svgdocumenthandler.cxx
@@ -203,6 +203,7 @@ namespace
                     mpTarget->parseAttributes(xAttribs);
                     break;
                 }
+                case SVGToken::Switch: //TODO: Support switch element
                 case SVGToken::Defs:
                 case SVGToken::G:
                 {
@@ -487,6 +488,7 @@ namespace
                 case SVGToken::G:
                 case SVGToken::Svg:
                 case SVGToken::Symbol:
+                case SVGToken::Switch:
                 case SVGToken::Use:
                 case SVGToken::A:
 
